--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "deepcopy": "^1.0.0",
     "jquery": "^3.3.1",
+    "radium": "^0.25.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.2.0",
