--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-event-listener": "^0.6.4",
     "react-native": "^0.57.4",
     "react-native-uuid-generator": "^4.0.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.17",
     "react-svg": "^6.0.24"
   },
