--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "concurrently": "^3.5.1",
     "express": "^4.16.2",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "shortid": "^2.2.14"
   }
 }
