--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "concurrently": "^3.5.1",
+    "deep-diff": "^1.0.2",
     "express": "^4.16.2",
     "reactstrap": "^6.5.0",
+    "regex": "^0.1.1",
     "shortid": "^2.2.14"
   }
 }
