--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-native-uuid-generator": "^4.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.0.17",
+    "react-select": "^2.1.1",
     "react-svg": "^6.0.24"
   },
   "scripts": {
