--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "deepcopy": "^1.0.0",
     "jquery": "^3.3.1",
+    "js-file-download": "^0.4.4",
     "radium": "^0.25.0",
     "react": "^16.7.0-alpha.0",
     "react-bootstrap": "^0.32.4",
