--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.2",
     "reactstrap": "^6.5.0",
     "regex": "^0.1.1",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.14",
+    "sqlite3": "^4.0.6"
   }
 }
